[gd_scene load_steps=19 format=2]

[ext_resource path="res://World/World.gd" type="Script" id=1]
[ext_resource path="res://Audio/Pew_Pew-DKnight556-1379997159.wav" type="AudioStream" id=2]
[ext_resource path="res://Player/Player Audio.gd" type="Script" id=3]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Audio/Wilhelm Scream - 0477.wav" type="AudioStream" id=5]
[ext_resource path="res://Zombie/Zombie Audio.gd" type="Script" id=6]
[ext_resource path="res://Interface/HUD Layer.gd" type="Script" id=7]
[ext_resource path="res://Interface/Fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Interface/Message.gd" type="Script" id=9]
[ext_resource path="res://Meshes/health_potion/Healthpwrup.tscn" type="PackedScene" id=10]
[ext_resource path="res://Meshes/ankh_asset/damagepwrup.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Interface/Fonts/Montserrat-ExtraBold.ttf"

[sub_resource type="DynamicFont" id=5]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=7]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[node name="World" type="Spatial"]
script = ExtResource( 1 )

[node name="Player Audio" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 4 )]

[node name="Zombie Audio" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 5 )
script = ExtResource( 6 )

[node name="HUD Layer" type="CanvasLayer" parent="."]
editor/display_folded = true
layer = 50
script = ExtResource( 7 )

[node name="Opponents" type="Label" parent="HUD Layer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -70.0
margin_right = 280.0
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="HealthPowerup" type="Label" parent="HUD Layer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1084.0
margin_top = -195.0
margin_right = 1538.0
margin_bottom = -125.0
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="DamagePowerup" type="Label" parent="HUD Layer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1085.0
margin_top = -140.0
margin_right = 1539.0
margin_bottom = -70.0
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="LevelTime" type="Label" parent="HUD Layer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -185.0
margin_top = 10.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "00:00"
align = 1
valign = 1

[node name="Ammo" type="Label" parent="HUD Layer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -70.0
rect_pivot_offset = Vector2( -906, -346 )
custom_fonts/font = SubResource( 3 )
text = "00/00"

[node name="PlayerHealth" type="Label" parent="HUD Layer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1524.62
margin_top = -860.681
margin_right = -1324.62
margin_bottom = -790.681
rect_pivot_offset = Vector2( -906, -346 )
custom_fonts/font = SubResource( 3 )
text = "00/00"

[node name="Message Layer" type="CanvasLayer" parent="."]
layer = 100

[node name="Message" type="Control" parent="Message Layer"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="Background" type="ColorRect" parent="Message Layer/Message"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -300.0
margin_right = 250.0
margin_bottom = 300.0
color = Color( 0, 0, 0, 0.352941 )

[node name="Message Box" type="Label" parent="Message Layer/Message/Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -242.5
margin_right = 243.5
margin_bottom = 104.0
custom_fonts/font = SubResource( 5 )
text = "<message>"
align = 1
valign = 1

[node name="Restart" type="Button" parent="Message Layer/Message/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -33.0
margin_right = 100.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 6 )
text = "Restart"

[node name="Exit" type="Button" parent="Message Layer/Message/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 58.0
margin_right = 100.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 7 )
text = "Exit"

[node name="PopUpBG" type="ColorRect" parent="Message Layer/Message"]
margin_right = 40.0
margin_bottom = 40.0

[node name="popupmessage" type="Label" parent="Message Layer/Message/PopUpBG"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Timer" type="Timer" parent="."]
wait_time = 7.63

[node name="Spatial" parent="." instance=ExtResource( 10 )]
transform = Transform( 0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 5.06647, 0, 0 )

[node name="Spatial2" parent="." instance=ExtResource( 11 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, -5.8574, 0, 0 )
[connection signal="pressed" from="Message Layer/Message/Background/Restart" to="Message Layer/Message" method="_on_Restart_pressed"]
[connection signal="pressed" from="Message Layer/Message/Background/Exit" to="Message Layer/Message" method="_on_Exit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
